@@ -1,3 +1,9 @@
+2006-01-17 Perry
+ PATCH: [ 1401711 ] A hybrid of word diff and char diff
+ Submitted by Takashi Sawanaka
+  Src: MergeDocLineDiffs.cpp PropEditor.cpp
+   stringdiffs.cpp stringdiffs.h
+
 2006-01-16 Kimmo
  PATCH: [ 1406203 ] Open unique files to external editor
   Src: DirView.cpp Merge.rc resource.h
